# cppforge

./: .clang-format  .clang-tidy  .env.example  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  main.cpp  test_psql.cpp
.github/workflows/: ci.yml
cmake/: CompilerSettings.cmake
docs/database/: schema.md
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/entities/: Achievement.hpp  CodingTask.hpp  ExecutionResult.hpp  Lesson.hpp  MatchingPair.hpp  MatchingTask.hpp  Module.hpp  Quiz.hpp  QuizOption.hpp  Submission.hpp  TestCase.hpp  User.hpp  UserProgress.hpp
src/core/include/repositories/: ICodingTaskRepository.hpp  ILessonRepository.hpp  IMatchingTaskRepository.hpp  IModuleRepository.hpp  IQuizRepository.hpp  IUserRepository.hpp
src/core/include/services/: AuthManager.hpp  CodeRunner.hpp  SessionManager.hpp  StaticAnalyzer.hpp
src/core/include/utils/: EnvLoader.hpp
src/core/include/utils/security/: PasswordHashGenerator.hpp
src/core/src/entities/: Achievement.cpp  CodingTask.cpp  ExecutionResult.cpp  Lesson.cpp  MatchingPair.cpp  MatchingTask.cpp  Module.cpp  Quiz.cpp  QuizOption.cpp  Submission.cpp  TestCase.cpp  User.cpp  UserProgress.cpp
src/core/src/services/: AuthManager.cpp  CodeRunner.cpp  SessionManager.cpp  StaticAnalyzer.cpp
src/core/src/utils/: EnvLoader.cpp
src/core/src/utils/security/: PasswordHashGenerator.cpp
src/data/: CMakeLists.txt  DataBaseConnection.cpp
src/data/migrations/: schema.sql  seed.sql
src/data/repositories/: DataBaseConnection.hpp  PgCodingTaskRepository.cpp  PgCodingTaskRepository.hpp  PgLessonRepository.cpp  PgLessonRepository.hpp  PgMatchingTaskRepository.cpp  PgMatchingTaskRepository.hpp  PgModuleRepository.cpp  PgModuleRepository.hpp  PgQuizRepository.cpp  PgQuizRepository.hpp  PgUserRepository.cpp  PgUserRepository.hpp
src/gui/: CMakeLists.txt
src/gui/include/: AuthWindow.hpp  CustomTitleBar.hpp  MainWindow.hpp  SignUpWindow.hpp  TaskManager.hpp  TaskWindow.hpp  authwindow.hpp  mainwindow.hpp
src/gui/resources/: resources.qrc
src/gui/resources/tasks/: tasks.json
src/gui/src/: AuthWindow.cpp  CustomTitleBar.cpp  MainWindow.cpp  SignUpWindow.cpp  TaskManager.cpp  TaskWindow.cpp  authwindow.cpp  mainwindow.cpp  signupwindow.cpp
tests/: CMakeLists.txt
tests/unit/: test_AuthWindow.cpp  test_CustomTitleBar.cpp  test_DataBaseConnection.cpp  test_DatabaseConnection.cpp  test_EnvLoader.cpp  test_MainWindow.cpp  test_PasswordHashGenerator.cpp  test_SignUpWindow.cpp  test_StaticAnalyzer.cpp
